[package]
name = "password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
dialoguer = {version = "0.10.4", features = ["fuzzy-select"]}
serde = { version = "1.0.175", features = ["derive"] }
rand = "0.8.5"
magic-crypt = "3.1.12"
